--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,7 +59,8 @@ javac.classpath=\
     ${file.reference.pi4j-gpio-extension.jar}:\
     ${file.reference.pi4j-service-javadoc.jar}:\
     ${file.reference.pi4j-service-sources.jar}:\
-    ${file.reference.pi4j-service.jar}
+    ${file.reference.pi4j-service.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
